--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/bobabun21/bobabun21.github.io.git"
+  "homepage": "https://bobabun21.github.io/"
 }
