--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://bobabun21.github.io/"
+  "homepage": "https://kelseybelanger.com"
 }
